aau/sf_autobackup/objects/Bus_Route_Waypoints__c.object
<CustomObject>
    <description>To  hold all Waypoint records</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reference to the route object</description>
        <label>Route</label>
        <referenceTo>Bus_Route__c</referenceTo>
        <relationshipLabel>Bus Route Waypoints</relationshipLabel>
        <relationshipName>Bus_Route_Waypoints</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Order__c</fullName>
        <formula>Route__r.Id   &amp;   TEXT(Order__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique__c</fullName>
        <label>Unique</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bus Route Waypoints</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Route__c</columns>
        <columns>Order__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Bus Route Waypoints Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Route Waypoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>